update for 29 April Homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,19 +29,19 @@
             <h2 id="about">Portfolio</h2>
                 
                 <div class="port-list" id="place1">
-                    <h4>Hangman</h4>
+                    <a href="https://cslane64.github.io/Word-Guess-Game/"><h4>Hangman</h4></a>
                 </div>
                 <div class="port-list" id="place2">
-                    <h4>RPG Game</h4>
+                    <a href="https://cslane64.github.io/unit-4-game/"><h4>RPG Game</h4></a>
                 </div>
                 <div class="port-list" id="place3">
-                    <h4>Trivia Game</h4>
+                    <a href="https://cslane64.github.io/TriviaGame/"><h4>Trivia Game</h4></a>
                 </div>
                 <div class="port-list" id="place4">
-                    <h4>Rutgers Info Widget</h4>
+                    <a href="https://cslane64.github.io/Train/"><h4>Train Schedule</h4></a>
                 </div>
                 <div class="port-list" id="place5">
-                     <h4>Rock Paper Scisors</h4>
+                    <a href="https://pekwalla.github.io/Project1/"><h4>Project 1</h4></a>
                 </div>
             <!--used to prevent the background from collapsing due to floated elements-->
                 <div class="clearfix"></div>
