--- a/portfolio.html
+++ b/portfolio.html
@@ -29,19 +29,22 @@
             <h2 id="about">Portfolio</h2>
                 
                 <div class="port-list" id="place1">
-                    <a href="https://cslane64.github.io/Word-Guess-Game/"><h4>Hangman</h4></a>
+                    <a href="https://cslane64.github.io/Word-Guess-Game/" target="_blank"><h4>Hangman</h4></a>
                 </div>
                 <div class="port-list" id="place2">
-                    <a href="https://cslane64.github.io/unit-4-game/"><h4>RPG Game</h4></a>
+                    <a href="https://cslane64.github.io/unit-4-game/" target="_blank"><h4>RPG Game</h4></a>
                 </div>
                 <div class="port-list" id="place3">
-                    <a href="https://cslane64.github.io/TriviaGame/"><h4>Trivia Game</h4></a>
+                    <a href="https://cslane64.github.io/TriviaGame/" target="_blank"><h4>Trivia Game</h4></a>
                 </div>
                 <div class="port-list" id="place4">
-                    <a href="https://cslane64.github.io/Train/"><h4>Train Schedule</h4></a>
+                    <a href="https://cslane64.github.io/Train/" target="_blank"><h4>Train Schedule</h4></a>
                 </div>
                 <div class="port-list" id="place5">
-                    <a href="https://pekwalla.github.io/Project1/"><h4>Project 1</h4></a>
+                    <a href="https://pekwalla.github.io/Project1/" target="_blank"><h4>Project 1</h4></a>
+                </div>
+                <div class="port-list" id="place6">
+                    <a href="https://shrouded-bastion-71069.herokuapp.com/" target="_blank"><h4>Friend Finder</h4></a>
                 </div>
             <!--used to prevent the background from collapsing due to floated elements-->
                 <div class="clearfix"></div>
