Updated with Project 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,9 @@
                 <div class="port-list" id="place6">
                     <a href="https://shrouded-bastion-71069.herokuapp.com/" target="_blank"><h4>Friend Finder</h4></a>
                 </div>
+                <div class="port-list" id="place7">
+                    <a href="https://dry-oasis-64452.herokuapp.com/" target="_blank"><h4>Zoom In</h4></a>
+                </div>
             <!--used to prevent the background from collapsing due to floated elements-->
                 <div class="clearfix"></div>
         </article>
